# droid-proxy

./: .gitignore  .gitmodules  README.md  commandcode-routing.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.commandcode/: taste.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  desktop-release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts  vite.management-ui.ts
apps/desktop/src/: App.tsx  index.css  main.ts  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  management.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  management_webview.rs  quota_parse.rs  quota_poller.rs  settings.rs  supervisor.rs
apps/desktop/src-tauri/src/commands/: desktop_settings.rs  lab.rs  mgmt.rs  mod.rs  quota.rs
apps/desktop/src/components/: AppShell.tsx
apps/desktop/src/hooks/: useToast.tsx
apps/desktop/src/lib/: labels.ts  tauri.ts  types.ts
apps/desktop/src/management/: types.ts  vendor-modules.d.ts
apps/desktop/src/pages/: DashboardPage.tsx  ManagementApp.tsx  ManagementQuotaPage.tsx  SettingsPage.tsx
apps/desktop/src/styles/: dashboard.css
apps/sidecar/: package.json  tsconfig.json  tsup.config.ts
apps/sidecar/src/: main.ts  orchestrator.ts  paths.ts
apps/sidecar/src/__tests__/: health.test.ts  paths.test.ts
dashboard/: app.js  index.html  styles.css
docs/: design-windows-app-0f21a773.md
resources/: config.template.yaml
scripts/: verify-backend-version-pin.mjs
src/: cli.js
(+8 files in other folders)
