[package]
name = "droidproxy-desktop"
version = "0.1.0"
description = "DroidProxy desktop shell"
authors = ["DroidProxy"]
edition = "2021"

[lib]
name = "droidproxy_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
regex = "1"
dirs = "6"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }